--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "git": "git add . && git commit -m \"abs\" && git push origin master  "
   },
   "eslintConfig": {
     "extends": [
